tree-sitter-cg/grammar.js
    source_file: $ => seq(
      repeat1(choice(
        $.set_special_list,
        $.static_sets,
        $.parentheses,
        $.mapping_prefix,
        $.subreadings,
        $.options,
        $.list_tags,
        $.strict_tags,
        $.list,
        $.set,
        $.template,
        $.include,
        $.section_header,
        $.anchor,
        $.rule,
        $.rule_substitute_etc,
        $.rule_map_etc,
        $.rule_parentchild,
        $.rule_move,
        $.rule_switch,
        $.rule_relation,
        $.rule_relations,
        $.rule_addcohort,
        $.rule_copycohort,
        $.rule_mergecohorts,
        $.rule_external,
        $.rule_with,
        $.semicolon,
      )),
    ),

    eq: $ => '=',
    semicolon: $ => ';',

    list: $ => seq(
      $.LIST,
      field('name', $.setname),
      choice($.eq, $.pluseq),
      field('value', $.taglist),
      $.semicolon,
    ),

    set: $ => seq(
      $.SET,
      field('name', $.setname),
      $.eq,
      field('value', $.inlineset),
      $.semicolon,
    ),

    section_header: $ => seq(
      choice(
        kwd('SETS'),
        kwd('BEFORE-SECTIONS'),
        kwd('MAPPINGS'),
        kwd('CORRECTIONS'),
        kwd('SECTION'),
        kwd('CONSTRAINTS'),
        kwd('AFTER-SECTIONS'),
        kwd('NULL-SECTION'),
      ),
      choice('\n', field('name', optional(seq($.ntag, $.semicolon)))),
    ),

    _context: $ => repeat1(seq(
      '(',
      $.contexttest,
      ')',
    )),

    rule_target: $ => seq(
      optional($.TARGET),
      field('target', $.inlineset),
    ),

    _shared_rule_end: $ => seq(
      field('target', $.rule_target),
      optional($.IF),
      field('context', optional($._context)),
      $.semicolon,
    ),

    rule: $ => seq(
      field('word', optional($.qtag)),
      field('type', $.ruletype),
      choice(/[\s\n]+/, field('name', $.rule_name)),
      field('flag', optional($.ruleflag)),
      $._shared_rule_end,
    ),

    rule_substitute_etc: $ => seq(
      field('word', optional($.qtag)),
      field('type', $.ruletype_substitute_etc),
      choice(/[\s\n]+/, field('name', $.rule_name)),
      field('flag', optional($.ruleflag)),
      field('src', $.inlineset),
      field('trg', $.inlineset),
      $._shared_rule_end,
    ),

    rule_map_etc: $ => seq(
      field('word', optional($.qtag)),
      field('type', $.ruletype_map_etc),
      choice(/[\s\n]+/, field('name', $.rule_name)),
      field('flag', optional($.ruleflag)),
      field('tags', $.inlineset),
      optional(seq($.EXCEPT, field('except', $.inlineset))),
      optional(seq(choice($.BEFORE, $.AFTER), $.inlineset)),
      $._shared_rule_end,
    ),

    rule_parentchild: $ => seq(
      field('word', optional($.qtag)),
      field('type', $.ruletype_parentchild),
      choice(/[\s\n]+/, field('name', $.rule_name)),
      field('flag', optional($.ruleflag)),
      field('trg', $.rule_target),
      optional($.IF),
      field('context', optional($._context)),
      choice($.TO, $.FROM),
      field('to_from', $._context),
      $.semicolon,
    ),

    _child_specifier: $ => choice(
      seq($.WITHCHILD, field('withchild', $.inlineset)),
      field('nochild', $.NOCHILD),
    ),

    rule_copycohort: $ => seq(
      field('word', optional($.qtag)),
      field('type', $.ruletype_copycohort),
      choice(/[\s\n]+/, field('name', $.rule_name)),
      field('flag', optional($.ruleflag)),
      field('tags', $.inlineset),
      optional(seq($.EXCEPT, field('except', $.inlineset))),
      optional(choice($.BEFORE, $.AFTER)),
      optional($._child_specifier),
      field('target', $.rule_target),
      optional($.IF),
      field('context', optional($._context)),
      $.FROM,
      field('context_target', $._context),
      $.semicolon,
    ),

    rule_with: $ => seq(
      field('word', optional($.qtag)),
      field('type', $.ruletype_with),
      choice(/[\s\n]+/, field('name', $.rule_name)),
      field('flag', optional($.ruleflag)),
      field('trg', $.rule_target),
      optional($.IF),
      field('context', optional($._context)),
      '{',
      field('children', repeat(choice(
        $.rule,
        $.rule_substitute_etc,
        $.rule_map_etc,
        $.rule_parentchild,
        $.rule_move,
        $.rule_switch,
        $.rule_relation,
        $.rule_relations,
        $.rule_addcohort,
        $.rule_mergecohorts,
        $.rule_external,
        $.rule_with,
      ))),
      '}',
      $.semicolon,
    ),

    contexttest: $ => seq(
      field('modifier', repeat($.context_modifier)),
      choice(
        seq(
          choice(
            seq(
              field('pos', optional($.contextpos)),
              field('set', $.setname_t)
            ),
            seq(
              field('pos', $.contextpos),
              field('set', optional($.inlineset))
            ),
          ),
          optional(seq(
            $.BARRIER,
            field('barrier', $.inlineset),
          )),
          optional(seq(
            $.LINK,
            field('link', $.contexttest),
          )),
        ),
        seq(
          '[',
          $.inlineset,
          repeat(seq(
            ',',
            $.inlineset,
          )),
          ']',
          optional(seq(
            $.LINK,
            field('link', $.contexttest),
          )),
        ),
        seq(
          '(',
          $.contexttest,
          ')',
          repeat(seq(
            $.OR,
            '(',
            $.contexttest,
            ')',
          )),
          optional(seq(
            $.LINK,
            field('link', $.contexttest),
          )),
        ),
      ),
    ),

    inlineset: $ => seq(
      $.inlineset_single,
      repeat(seq(
        $.set_op,
        $.inlineset_single,
      )),
    ),

    inlineset_single: $ => choice(
      seq('(', $.taglist, ')'),
      $.setname,
    ),

    set_op: $ => /[Oo][Rr]|[|+^∆∩\\-]/,

    taglist: $ => repeat1(choice($.tag, $.compotag)),

    tag: $ => choice($.ntag, $.qtag),

    contextpos: $ => seq(
      make_contextpos([
        ['ctx_scan_all', '**'],
        ['ctx_scan_first', '*'],
        ['ctx_careful', 'C'],
        ['ctx_child', 'c'],
        ['ctx_parent', 'p'], // pp can be separated
        ['ctx_sibling', 's'],
        ['ctx_self', 'S'],
        ['ctx_no_barrier', 'N'],
        ['ctx_span_left', '<'],
        ['ctx_span_right', '>'],
        ['ctx_span_both', 'W'],
        ['ctx_absolute', '@'],
        ['ctx_no_pass_origin', 'O'],
        ['ctx_pass_origin', 'o'],
        ['ctx_left_par', 'L'],
        ['ctx_right_par', 'R'],
        ['ctx_mark_set', 'X'],
        ['ctx_jump_mark', /x|jCM/],
        ['ctx_look_deleted', 'D'],
        ['ctx_look_delayed', 'd'],
        ['ctx_look_ignored', 'I'],
        ['ctx_attach_to', 'A'],
        ['ctx_with', 'w'],
        ['ctx_unknown', '?'],
        ['ctx_numeric_branch', 'f'],
        ['ctx_active', 'T'],
        ['ctx_inactive', 't'],
        ['ctx_bag_of_tags', 'B'],
        ['ctx_negative', '-'],
        ['ctx_number', /[0-9]+/],
        ['ctx_relation', /r:([^\s(]+)/],
        ['ctx_right', 'r'], // rr can be separated
        ['ctx_left', 'l'], // ll can be separated
        ['ctx_jump_attach', 'jA'],
        ['ctx_jump_target', 'jT'],
        ['ctx_jump_context', /jC[1-9]/],
      ]),
      optional(seq(
        token.immediate('/'),
        choice(
          alias(token.immediate(/-?[0-9]+/), sym('ctx_subreading')),
          alias(token.immediate(/\*\*?/), sym('ctx_subreading_any')),
        ),
      )),
      token.immediate(/[\s\n]/),
    ),

    ruletype: $ => kwd('SELECT|REMOVE|IFF|DELIMIT|MATCH|REMCOHORT|UNMAP|PROTECT|UNPROTECT|REMPARENT'),

    ruletype_substitute_etc: $ => kwd('SUBSTITUTE|SETVARIABLE|EXECUTE'),

    ruletype_parentchild: $ => kwd('SETPARENT|SETCHILD'),

    ruletype_map_etc: $ => kwd('ADD|MAP|REPLACE|APPEND|COPY|REMVARIABLE|JUMP|RESTORE|SPLITCOHORT'),

    ruletype_copycohort: $ => kwd('COPYCOHORT'),

    ruletype_with: $ => kwd('WITH'),

    ruleflag_name: $ => kwd('NEAREST|ALLOWLOOP|DELAYED|IMMEDIATE|LOOK(DELETED|DELAYED)|(UN)?SAFE|REMEMBERX|RESETX|(KEEP|VARY)ORDER|ENCL_(INNER|OUTER|FINAL|ANY)|ALLOWCROSS|(NO)?ITERATE|UNMAPLAST|REVERSE|SUB|REPEAT|NOMAPPED|NOPARENT|IGNORED'),

    ruleflag: $ => repeat1(choice(
      $.subreading,
      seq(
        $.ruleflag_name,
        optional(seq(
          token.immediate(':'),
          $.ntag,
        )),
      ),
    )),

    // TODO: it would be nice to give this some internal structure
    subreading: $ => /[Ss][Uu][Bb]:(-?[0123456789]+|\*)/,

    // cannot begin with [
    // cannot end with ] or ,
    // cannot contain ( ) ; \s
    setname: $ => prec(1, /[^\[\],();\s]|[^\[();\s][^();\s]*[^();\s,\]]/),
    ntag: $ => /(\\[^\n\r]|[^\"#();\s])+(\\[^\n\r]|[^#();\s])*|\/(\\[^\n\r]|[^/\s;#])*\/\w*/,

    qtag: $ => /[!^]?\"(\\[^\n\r]|[^\"\\])*\"(\\[^\r\n]|[^();\s])*/,

    comment: $ => choice(
      /#[^\r\n]*/,
      seq($.END, /(.|\n)*/),
    ),
  },
})
