tree-sitter-cg/test/corpus/subreading.txt
===========
Subreadings
===========

SUBSTITUTE SUB:1 P3 P1 TARGET Cop IF (1 Pers) ;

---

(source_file
  (rule_substitute_etc
    type: (ruletype_substitute_etc)
    flag: (ruleflag (subreading))
    src: (inlineset (inlineset_single (setname)))
    trg: (inlineset (inlineset_single (setname)))
    target: (rule_target
      (TARGET) target: (inlineset (inlineset_single (setname))))
    (IF)
    context: (contexttest
      pos: (contextpos (ctx_number))
      set: (inlineset (inlineset_single (setname))))
    (semicolon)))

===============
all subreadings
===============

REMOVE SUB:* X IF (1 Y) ;

---

(source_file
  (rule
    type: (ruletype)
    flag: (ruleflag (subreading))
    target: (rule_target target: (inlineset (inlineset_single (setname))))
    (IF)
    context: (contexttest
      pos: (contextpos (ctx_number))
      set: (inlineset (inlineset_single (setname))))
    (semicolon)))
